Fri Oct 15 01:32:31 1999  WATANABE Hirofumi  <eban@os.rim.or.jp>

	* ext/Win32API/Win32API.c (Win32API_Call): need to use NUM2ULONG,
	  not NUM2INT.

Tue Oct 12 22:29:04 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* eval.c (block_pass): should copy block to prevent modifications.
	  tag in the structure should be updated from latest prot_tag.

	* eval.c (proc_s_new): tag in struct BLOCK should not point into
	  unused stack.

	* io.c (io_read): length may be 0 or negative.

Tue Oct 12 13:26:27 1999  Jun-ichiro itojun Hagino  <itojun@itojun.org>

	* signal.c (posix_signal): RETSIGTYPE may be void.

Mon Oct 11 17:42:25 1999  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* parse.y (rb_intern): should generate distinct ID_ATTRSET symbols
	  for the name with multiple `='s at the end.

	* Makefile.in (CPPFLAGS): separate cpp flags from CFLAGS.

Mon Oct 11 07:27:05 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* eval.c (rb_eval): should not execute the `else' clause on the
	  case the exceptions are handled by the `rescue' clause.

	* signal.c (Init_signal): ignore SIGPIPE by default.

Mon Oct  4 12:42:32 1999  Kazuhiko Izawa  <izawa@erec.che.tohoku.ac.jp>

	* pack.c (pack_unpack): % in printf format should be %%.

Wed Oct  6 17:13:19 1999  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* ruby.c (addpath): rubylib_mangled_path() modified.

Mon Oct  4 10:01:40 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* variable.c (rb_obj_instance_variables): should always return
	  array for all object can have instance variables now.

Mon Oct  4 00:08:34 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* pack.c (OFF16): need to adjust pointer address to pack/unpack on
	  64bit machines.

Sun Oct 03 03:05:59 1999  WATANABE Hirofumi  <eban@os.rim.or.jp>

	* time.c (time_arg): mktime y2k problem.

Sun Sep 26 16:54:45 1999  WATANABE Hirofumi  <eban@os.rim.or.jp>

	* parse.y (here_document): `\r' handling for here documents.
